# MealPlanner

./: README.md
smart_recipe_meal_planner/: .gitignore  README.md  pyproject.toml
smart_recipe_meal_planner/app/: main.py
smart_recipe_meal_planner/app/api/v1/: __init__.py
smart_recipe_meal_planner/app/clients/: spoonacular_client.py
smart_recipe_meal_planner/app/core/: config.py  logging_config.py
smart_recipe_meal_planner/app/db/: base_class.py  session.py
smart_recipe_meal_planner/app/db/models/: __init__.py  ingredient_model.py  meal_plan_model.py  meal_plan_recipe_model.py  recipe_ingredient_model.py  recipe_model.py  user_model.py  user_saved_recipe_model.py
smart_recipe_meal_planner/app/models/: __init__.py  common_schemas.py  recipe_schemas.py
smart_recipe_meal_planner/app/services/: recipe_mapper.py  recipe_service.py
smart_recipe_meal_planner/app/tests/services/: test_recipe_mapper.py  test_recipe_service.py
smart_recipe_meal_planner/frontend/ui/: package-lock.json  package.json  vitest.config.js  vitest.setup.js
smart_recipe_meal_planner/frontend/ui/src/: App.css  App.jsx  App.test.jsx
smart_recipe_meal_planner/migrations/versions/: 0001_add_nutritional_info_to_recipes.py
smart_recipe_meal_planner/smart_recipe_meal_planner/: alembic.ini
smart_recipe_meal_planner/smart_recipe_meal_planner/app/services/: recipe_service.py
smart_recipe_meal_planner/smart_recipe_meal_planner/migrations/: env.py
smart_recipe_meal_planner/smart_recipe_meal_planner/migrations/versions/: 55b956e30097_add_spoonacular_id_to_recipes_table.py
(+11 files in other folders)
