[tool.poetry]
name = "smart-recipe-meal-planner"
version = "0.1.0"
description = "Backend services for the Smart Recipe Meal Planner Application"
authors = ["Your Name <you@example.com>"] # Placeholder, will be updated
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = {extras = ["email"], version = "^2.6.0"}
sqlalchemy = "^2.0.28"
psycopg2-binary = "^2.9.9" # For PostgreSQL
alembic = "^1.13.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"} # For JWT
passlib = {extras = ["bcrypt"], version = "^1.7.4"} # For password hashing
tenacity = "^8.2.3" # For retrying operations (e.g., DB connection)
python-multipart = "^0.0.9" # For file uploads (e.g., recipe images)
httpx = "^0.27.0" # For making external API calls (Phase 2)
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
requests = "^2.31.0" # Simpler HTTP requests for now, can be replaced by httpx if preferred

[tool.poetry.dev-dependencies]
mypy = "^1.9.0"
ruff = "^0.3.0" # Linter and formatter

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
select = ["E", "W", "F", "I", "C", "B"] # pycodestyle, pyflakes, import order, complexity, bugbear
ignore = ["E501"] # Handled by formatter

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_redefinition = true # Useful for FastAPI dependencies
